# Exercises

./: .gitignore  README.md
ML/: ML.ipynb  Paper-out.ipynb  Paper.ipynb  strategy.py
acceletedC++/chap00/: ex00.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex05.cpp  ex07.cpp  ex08.cpp  ex10.cpp
acceletedC++/chap01/: ex00.cpp  ex01.cpp  ex02.cpp  ex06.cpp
acceletedC++/chap02/: ex00.cpp  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex05.cpp  ex06.cpp  ex07.cpp  ex08.cpp  ex09.cpp
acceletedC++/chap03/: ex00.cpp  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex05.cpp  ex06.cpp
acceletedC++/chap04/: ex00.cpp  ex01.cpp  ex02.cpp  ex03.cpp  ex05.cpp  ex05.txt  ex07.cpp  grade.cpp  grade.h  median.cpp  median.h  student.cpp  student.h  test.txt
acceletedC++/chap05/: ex00.cpp  ex01.cpp  ex01r.cpp  ex02.cpp  ex02l.cpp  ex02v.cpp  ex03.cpp  ex05.cpp  ex06.cpp  ex09.cpp  ex10.cpp  test.cpp
advent2019/: Cargo.toml
buildyx/kilo/rust/: Cargo.toml
buildyx/kilo/rust/src/: app.rs  event.rs  lib.rs  main.rs
c/tac/: Makefile
cpp/: 002.cpp  ex1.cpp  ex10.cpp  ex1_two_sum.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  test.cpp  test2.cpp  test3.cpp  test4.cpp
cpp/hw2/src/igg_image/: CMakeLists.txt  image.cpp  image.h  main.cpp
cpp/learn_project/: CMakeLists.txt
cpp/learn_project/src/: CMakeLists.txt  blah.cpp  blah.h  hello.cpp  hello.h  main.cpp
cpp/learn_project/tests/: CMakeLists.txt  test.cpp
csapp/: .gitignore  Cargo.toml  notes.chap03.typ  notes.typ
haskell/: Exercises.cabal  stack.yaml
rust/: Cargo.toml
sicp/: ex1.rkt  ex2.rkt  ex3.rkt
(+214 files in other folders)
