[package]
name = "kilo"
version = "0.1.0"
authors = ["xi.nie <xi.nie@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.10.0"
env_logger = "0.7.1"
log = "0.4.11"
dotenv = "0.15.0"
crossterm = "0.17.7"
termion = "1.5.5"
crossbeam = "0.7.3"
